[gd_scene load_steps=5 format=3 uid="uid://c6dao31vm8tl4"]

[ext_resource type="Texture2D" uid="uid://cmutj84sj4sbj" path="res://assets/sprites/world_tileset.png" id="1_4vr1k"]
[ext_resource type="Script" path="res://scripts/sign.gd" id="1_tvkxb"]
[ext_resource type="FontFile" uid="uid://dc1jnswhmj5xx" path="res://assets/fonts/PixelOperator8.ttf" id="3_4toym"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_joqja"]
size = Vector2(16, 15)

[node name="Sign" type="Area2D"]
collision_mask = 2
script = ExtResource("1_tvkxb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_joqja")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4vr1k")
region_enabled = true
region_rect = Rect2(129, 66, 14, 14)

[node name="Text" type="Label" parent="."]
offset_left = -59.0
offset_top = -36.0
offset_right = 66.0
offset_bottom = -17.0
theme_override_fonts/font = ExtResource("3_4toym")
theme_override_font_sizes/font_size = 8
text = "Press \"E\" to 
interact with signs."

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
